--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,73 +1,48 @@
-# .github/workflows/deploy.yml
-
-# Name of the workflow displayed on GitHub Actions tab
-name: Deploy Vite App to GitHub Pages
+name: Deploy to GitHub Pages
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push events but only for the main branch
+  # Triggers the workflow on pushes to the main branch
   push:
-    branches: [main]
+    branches:
+      - main # Or 'master', depending on your default branch name
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
-# Define the jobs that will run as part of the workflow
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # Build job: responsible for checking out code, setting up Node, installing dependencies, and building the app
-  build:
-    runs-on: ubuntu-latest # Use the latest Ubuntu runner
+  # This workflow contains a single job called "build-and-deploy"
+  build-and-deploy:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout repository # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js # Sets up a specific version of Node.js
+      # Set up Node.js environment
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20 # Use Node.js version 20.x (LTS recommended)
-          cache: "npm" # Enable caching for npm dependencies
+          node-version: '20' # Use a stable Node.js version
 
-      - name: Install dependencies # Installs project dependencies using npm ci for faster, reliable installs
-        run: npm ci
+      # Install dependencies
+      - name: Install dependencies
+        run: npm ci # 'ci' is recommended in CI environments for clean installs
 
-      - name: Build project # Runs the build script defined in package.json
-        run: npm run build
-        env:
-          # Add any build-time environment variables here if needed
-          # Example: VITE_API_URL: ${{ secrets.VITE_API_URL }}
-          NODE_ENV: production
+      # Build the React application
+      - name: Build application
+        run: npm run build # This runs the build script defined in your package.json
 
-      - name: Setup Pages # Configures GitHub Pages options
-        uses: actions/configure-pages@v5
-
-      - name: Upload artifact # Uploads the build output directory ('dist') as an artifact for the deployment job
-        uses: actions/upload-pages-artifact@v3
+      # Deploy to GitHub Pages
+      # This action requires a GitHub token to push to the gh-pages branch
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          # Upload the 'dist' directory (default output for Vite)
-          path: "./build"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          # The directory that contains the built files (usually 'build' for CRA, 'dist' for Vite)
+          publish_dir: ./build # Update this to ./dist if you used Vite
 
-  # Deploy job: responsible for deploying the built artifact to GitHub Pages
-  deploy:
-    needs: build # This job runs only after the 'build' job completes successfully
-    runs-on: ubuntu-latest # Use the latest Ubuntu runner
-    environment:
-      name: github-pages # Specify the deployment environment
-      url: ${{ steps.deployment.outputs.page_url }} # Get the deployment URL output
-
-    steps:
-      - name: Deploy to GitHub Pages # Uses the official action to deploy the artifact
-        id: deployment
-        uses: actions/deploy-pages@v4
-        # No 'with' section needed here as it automatically uses the artifact uploaded by upload-pages-artifact
