--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,12 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Add permissions for the GITHUB_TOKEN
+    permissions:
+      contents: write # This grants write access to the repository contents
+      pages: write # This grants write access to GitHub Pages
+      id-token: write # This is required for the peaceiris/actions-gh-pages@v4 action
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
